[gd_scene format=3 uid="uid://b2vd83os48jst"]

[ext_resource type="Script" uid="uid://ctdpewrbiaupa" path="res://Scripts/StatBlock.gd" id="1_dxr80"]

[node name="StatBlock" type="Control" unique_id=1916233769]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dxr80")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1711066088]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 77.0
grow_horizontal = 0

[node name="DamageLabel" type="Label" parent="VBoxContainer" unique_id=737825296]
layout_mode = 2

[node name="FireRateLabel" type="Label" parent="VBoxContainer" unique_id=1528656979]
layout_mode = 2

[node name="MoveSpeedLabel" type="Label" parent="VBoxContainer" unique_id=1647687875]
layout_mode = 2

[node name="CritChanceLabel" type="Label" parent="VBoxContainer" unique_id=664449623]
layout_mode = 2

[node name="CritMultLabel" type="Label" parent="VBoxContainer" unique_id=108652207]
layout_mode = 2

[node name="JumpVelLabel" type="Label" parent="VBoxContainer" unique_id=1365852849]
layout_mode = 2

[node name="LifeRegenLabel" type="Label" parent="VBoxContainer" unique_id=1158994345]
layout_mode = 2

[node name="LifeStealLabel" type="Label" parent="VBoxContainer" unique_id=1443745830]
layout_mode = 2

[node name="EvasionLabel" type="Label" parent="VBoxContainer" unique_id=769785944]
layout_mode = 2

[node name="MaxHpLabel" type="Label" parent="VBoxContainer" unique_id=673449296]
layout_mode = 2

[node name="ProjectilesLabel" type="Label" parent="VBoxContainer" unique_id=541010005]
layout_mode = 2

[node name="MagnetLabel" type="Label" parent="VBoxContainer" unique_id=328768073]
layout_mode = 2
